<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/main_coordinator"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".coffe.WidgetMainActivity">

    <TextView
      android:id="@+id/textView3"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="24dp"
      android:text="@string/today"
      android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
      app:layout_constraintBottom_toBottomOf="@id/linearLayout"
      app:layout_constraintEnd_toStartOf="@+id/linearLayout"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="24dp"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TextView
        android:id="@+id/grams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/grams_of_coffee_value_placeholder"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

      <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/grams_of_coffee" />
    </LinearLayout>

    <TextView
      android:id="@+id/textView4"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:background="@color/add_coffee_background"
      android:padding="8dp"
      android:text="@string/add_more_coffee"
      app:layout_constraintBottom_toTopOf="@+id/scrollView2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ScrollView
      android:id="@+id/scrollView2"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
          style="@style/BeverageButton"
          android:drawableStart="@drawable/ic_ristretto"
          android:onClick="onRistrettoPressed"
          android:text="@string/ristretto" />

        <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/add_coffee_background" />

        <androidx.appcompat.widget.AppCompatButton
          style="@style/BeverageButton"
          android:drawableStart="@drawable/ic_espresso"
          android:onClick="onEspressoPressed"
          android:text="@string/espresso" />

        <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/add_coffee_background" />

        <androidx.appcompat.widget.AppCompatButton
          style="@style/BeverageButton"
          android:drawableStart="@drawable/ic_long_coffee"
          android:onClick="onLongPressed"
          android:text="@string/long_coffee" />


      </LinearLayout>
    </ScrollView>

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
