<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/widget_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/background"
  android:gravity="center"
  android:orientation="vertical"
  android:padding="@dimen/widget_margin">

  <TextView style="@style/WidgetButtonVerticalSpace" />

  <TextView
    android:id="@+id/appwidget_text"
    style="@style/WidgetTextView.Big" />

  <TextView
    style="@style/WidgetTextView"
    android:text="@string/grams" />

  <TextView style="@style/WidgetButtonVerticalSpace" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView style="@style/WidgetButtonHorizontalSpace" />

    <LinearLayout
      android:id="@+id/ristretto_button"
      style="@style/WidgetBeverageButton" >

      <ImageView
        style="@style/WidgetButtonImage"
        android:src="@drawable/ic_ristretto" />
      <TextView
        style="@style/WidgetButtonText"
        android:text="@string/ristretto_short" />

    </LinearLayout>

    <TextView style="@style/WidgetButtonHorizontalSpace" />

    <LinearLayout
      android:id="@+id/espresso_button"
      style="@style/WidgetBeverageButton">

      <ImageView
        style="@style/WidgetButtonImage"
        android:src="@drawable/ic_espresso" />
      <TextView
        style="@style/WidgetButtonText"
        android:text="@string/espresso_short" />

    </LinearLayout>

    <TextView style="@style/WidgetButtonHorizontalSpace" />

    <LinearLayout
      android:id="@+id/long_button"
      style="@style/WidgetBeverageButton" >

      <ImageView
        style="@style/WidgetButtonImage"
        android:src="@drawable/ic_long_coffee" />
      <TextView
        style="@style/WidgetButtonText"
        android:text="@string/long_coffee_short" />

    </LinearLayout>

    <TextView style="@style/WidgetButtonHorizontalSpace" />

  </LinearLayout>

  <TextView style="@style/WidgetButtonVerticalSpace" />

  <TextView
    android:id="@+id/coffee_quote"
    style="@style/WidgetQuote" />

</LinearLayout>